--- a/style1.css
+++ b/style1.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
-  border: 5px solid black;
+  border: 10px solid black;
   height: 100vh;
   position: relative;
 }
 
 .one {
-  width: 400px;
+  width: 5%;
   height: 400px;
   background-color: red;
 }
